# boxbot

./: .cproject  .project  CMakeLists.txt
Debug/: BoxBot.ini  Cogs.ini
data/: Main.ini  Objects.ini  ScrollEd.ini  UI.ini
data/map/: Level1.map  Level2.map
data/scrolled/: ui.ini
src/: Game.cpp  Game.h  Player.cpp  Player.h
src/Scroll/: ScrollBase.h
src/VirtualGamePad/: VirtualGamePadButton.cpp  VirtualGamePadButton.h  VirtualGamePadInput.cpp  VirtualGamePadInput.h  orxVirtualGamePad.cpp  orxVirtualGamePad.h
